--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      globalThis.import_meta_env = JSON.parse('"import_meta_env_placeholder"');
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
